@@ -40,6 +40,7 @@ ingredients=Ingredients (__1__)
 made-in=Made in (__1__)
 material-upper=Material
 material=material
+mined-from=Mined from (__1__)
 no-results=No results
 open-quick-reference=Open quick reference panel
 product-of=Product of (__1__)
